[project]
name = "youtube-mixtape-creation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.2",
    "ipykernel>=7.3.0",
    "moviepy>=2.2.1",
    "pydub>=0.25.1",
    "python-multipart>=0.0.32",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
